--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
-  <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Cutive+Mono' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:700" rel="stylesheet">
 </head>
 <body>
 
 
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-fixed-top header">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12">
@@ -31,90 +29,182 @@
 
   <div class="container-fluid">
 
-    <!--<div contenteditable="true" class="script edit"> -->
-    <page contenteditable="true" class="script edit">
-      <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12">
-          <div class="title">
-            <br>
-            <h2 id="script-name">UNTITLED SCREENPLAY</h2>
-            <p>Written by Anand Subramaniam</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12">
-          <div class="act">start of act 1</div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-1 col-md-1 col-lg-1"></div>
-        <div class="col-sm-10 col-md-10 col-lg-10">
-          <div class="intro">
-            <h5 class="scene-heading">INT. SOME PLACE SOME WHERE — DAY
-              <br>
-            </h5>
-            <div class="action">
-              <p>This is called an action where you'd describe what is on screen — info about the setting too. Sound cues may be added here. Let's introduce VISITOR, our protagonist.</p>
-              <br>
-              <h5>Enter <span class="character">Visitor</span>.</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-1 col-md-1 col-lg-1"></div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-sm-2 col-md-2 col-lg-2"></div>
-        <div class="col-sm-8 col-md-8 col-lg-8">
-          <div class="main">
-            <h5 class="character speak">VISITOR</h5>
-            <p class="diag">This is where the dialogue goes. Write whatever you want - or rather, speak whatever you want.</p>
-          </div>
-        </div>
-        <div class="col-sm-2 col-md-2 col-lg-2"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12">
-          <div class="transition">:transition to</div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-2 col-md-2 col-lg-2"></div>
-        <div class="col-sm-8 col-md-8 col-lg-8">
-          <div class="main">
-            <h5 class="character speak">VISITOR</h5>
-            <p class="diag">This is where the second line of dialogue would go.</p>
-          </div>
-        </div>
-        <div class="col-sm-2 col-md-2 col-lg-2"></div>
-      </div>
-
-
-
-      <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12"></div>
-        <div class="transition">:fade to black</div>
-      </div>
-    </div>
-
-
-
-
-    <!-- <input type="button" value="save my edits" onclick="saveEdits()"> -->
-
-
+    <!-- <page contenteditable="true" class="script edit">
+    <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12">
-      <div class="break"></div>
-      <div class="break"></div>
-    </div>
+    <div class="title title-page">
+    <h4 id="script-name">UNTITLED SCREENPLAY</h4><br>
+    <p>written by<br>Anand Subramaniam</p>
+  </div>
+</div>
+</div>
+</page>
 
-  </page>
+<div class="break"></div>
+
+<page contenteditable="true" class="script edit">
+<div class="row">
+<div class="col-sm-1 col-md-1 col-lg-1"></div>
+<div class="col-sm-10 col-md-10 col-lg-10">
+<div class="intro">
+<h5 class="scene-heading">INT. SOME PLACE SOME WHERE — DAY
+<br>
+</h5>
+<div class="action">
+<p>This is called an action where you'd describe what is on screen — info about the setting too. Sound cues may be added here. Let's introduce VISITOR, our protagonist.</p>
+<br>
+<h5>Enter <span class="character">Visitor</span>.</h5>
+</div>
+</div>
+</div>
+<div class="col-sm-1 col-md-1 col-lg-1"></div>
+</div>
+
+
+<div class="row">
+<div class="col-sm-2 col-md-2 col-lg-2"></div>
+<div class="col-sm-8 col-md-8 col-lg-8">
+<div class="main">
+<h5 class="character speak">VISITOR</h5>
+<p class="diag">This is where the dialogue goes. Write whatever you want - or rather, speak whatever you want.</p>
+</div>
+</div>
+<div class="col-sm-2 col-md-2 col-lg-2"></div>
+</div>
+
+<div class="row">
+<div class="col-sm-12 col-md-12 col-lg-12">
+<div class="transition">:transition to</div>
+</div>
+</div>
+
+<div class="row">
+<div class="col-sm-2 col-md-2 col-lg-2"></div>
+<div class="col-sm-8 col-md-8 col-lg-8">
+<div class="main">
+<h5 class="character speak">VISITOR</h5>
+<p class="diag">This is where the second line of dialogue would go.</p>
+</div>
+</div>
+<div class="col-sm-2 col-md-2 col-lg-2"></div>
+</div>
+
+
+
+<div class="row">
+<div class="col-sm-12 col-md-12 col-lg-12">
+<div class="transition">:fade to black</div>
+</div>
+</div>
+
+
+<div class="row">
+<div class="col-sm-2 col-md-2 col-lg-2"></div>
+<div class="col-sm-8 col-md-8 col-lg-8">
+<div class="main">
+<h5 class="character speak">VISITOR</h5>
+<p class="diag">This is where another line of dialogue goes. Write whatever you want - or rather, speak whatever you want.</p>
+</div>
+</div>
+<div class="col-sm-2 col-md-2 col-lg-2"></div>
+</div>
+
+<div class="row">
+<div class="col-sm-12 col-md-12 col-lg-12">
+<div class="transition">:transition to</div>
+</div>
+</div>
+
+<div class="row">
+<div class="col-sm-2 col-md-2 col-lg-2"></div>
+<div class="col-sm-8 col-md-8 col-lg-8">
+<div class="main">
+<h5 class="character speak">VISITOR</h5>
+<p class="diag">This is where the fourth line of dialogue would go.</p>
+</div>
+</div>
+<div class="col-sm-2 col-md-2 col-lg-2"></div>
+</div>
+
+<div class="row">
+<div class="col-sm-12 col-md-12 col-lg-12">
+<div class="transition">:fade to black</div>
+</div>
+</div>
+</div>
+</page>
+
+
+<div class="break"></div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<page contenteditable="true" class="script edit title-page">
+  <div class="row">
+    <div class="col-sm-12 col-md-12 col-lg-12">
+      <span class="scene-heading">Untitled Screenplay</span><br><br>
+      written by<br>Anand Subramaniam
+      <br><br><br><br>
+      version 2, Sat 25 Feb 2017
+
+    </div>
+  </div>
+</page>
+
+<div class="break"></div>
+
+<page contenteditable="true" class="script edit">
+  <div class="row">
+    <div class="col-sm-1 col-md-1 col-lg-1"></div>
+    <div class="col-sm-10 col-md-10 col-lg-10">
+      <div class="main">
+      <div class="scene-heading">
+        INT. SOME PLACE SOME WHERE — DAY
+      </div><br>
+      A <span class="character">Visitor</span> is sat at his desk, seemingly working on something.<br><br>
+      <div class="speaker">VISITOR (mumbles)<br></div>
+      <div class="dialogue">How much longer is this going to take?<br><br></div>
+      <div class="transition">:transition to<br><br></div>
+      <div class="super">title:<br><br></div>
+      <div class="super-content">2017, London<br><br></div>
+    </div>
+    <div class="col-sm-1 col-md-1 col-lg-1"></div>
+    </div>
+  </div>
+</page>
+
+<div class="break"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </div>
 
 
