Add 1st page from The Social Network as sample + fix font import issue

--- a/index.html
+++ b/index.html
@@ -184,6 +184,33 @@
       <div class="transition">:transition to<br><br></div>
       <div class="super">title:<br><br></div>
       <div class="super-content">2017, London<br><br></div>
+      <div class="scene-heading">
+        INT. SOME PLACE SOME WHERE — DAY
+      </div><br>
+      A <span class="character">Visitor</span> is sat at his desk, seemingly working on something.<br><br>
+      <div class="speaker">VISITOR (mumbles)<br></div>
+      <div class="dialogue">How much longer is this going to take?<br><br></div>
+      <div class="transition">:transition to<br><br></div>
+      <div class="super">title:<br><br></div>
+      <div class="super-content">2017, London<br><br></div>
+      <div class="scene-heading">
+        INT. SOME PLACE SOME WHERE — DAY
+      </div><br>
+      A <span class="character">Visitor</span> is sat at his desk, seemingly working on something.<br><br>
+      <div class="speaker">VISITOR (mumbles)<br></div>
+      <div class="dialogue">How much longer is this going to take?<br><br></div>
+      <div class="transition">:transition to<br><br></div>
+      <div class="super">title:<br><br></div>
+      <div class="super-content">2017, London<br><br></div>
+      <div class="scene-heading">
+        INT. SOME PLACE SOME WHERE — DAY
+      </div><br>
+      A <span class="character">Visitor</span> is sat at his desk, seemingly working on something.<br><br>
+      <div class="speaker">VISITOR (mumbles)<br></div>
+      <div class="dialogue">How much longer is this going to take?<br><br></div>
+      <div class="transition">:transition to<br><br></div>
+      <div class="super">title:<br><br></div>
+      <div class="super-content">2017, London<br><br></div>
     </div>
     <div class="col-sm-1 col-md-1 col-lg-1"></div>
     </div>
@@ -193,6 +220,71 @@
 <div class="break"></div>
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<page contenteditable="true" class="script edit">
+  <div class="row">
+    <div class="col-sm-1 col-md-1 col-lg-1"></div>
+    <div class="col-sm-10 col-md-10 col-lg-10">
+      <div class="main">
+
+
+        <div class="scene-heading">
+          From the black we hear--
+        </div><br>
+        <div class="speaker">Mark (V.O.)<br></div>
+        <div class="dialogue">Did you know there are more people with
+genius IQ’s living in China than there are people of any kind living in the United States?<br><br></div>
+        <div class="speaker">Erica (V.O.)<br></div>
+        <div class="dialogue">That can’t possibly be true.<br><br></div>
+        <div class="speaker">Mark (V.O.)<br></div>
+        <div class="dialogue">It is.<br><br></div>
+        <div class="speaker">Erica (V.O.)<br></div>
+        <div class="dialogue">What would account for that?<br><br></div>
+        <div class="speaker">Mark (V.O.)<br></div>
+        <div class="dialogue">Well, first, an awful lot of people live
+in China. But here’s my question:<br><br></div>
+        <div class="transition">:Fade in<br><br></div>
+        <div class="scene-heading">
+          INT. CAMPUS BAR - NIGHT
+        </div><br>
+        <span class="character">MARK ZUCKERBERG</span> is a sweet looking 19 year old whose lack of any physically intimidating attributes masks a very complicated and dangerous anger. He has trouble making eye contact and sometimes it’s hard to tell if he’s talking to you or to himself.<br><br>
+        <span class="character">ERICA</span>, also 19, is Mark’s date. She has a girl-next-door face that makes her easy to fall for. At this point in the conversation she already knows that she’d rather not be there and her politeness is about to be tested.<br><br>
+        The scene is stark and simple.<br><br>
+        <div class="speaker">Mark<br></div>
+        <div class="dialogue">How do you distinguish yourself in a
+population of people who all got 1600 on their SAT’s?<br><br></div>
+        <div class="speaker">Erica<br></div>
+        <div class="dialogue">I didn’t know they take SAT’s in China.<br><br></div>
+        <div class="speaker">Mark<br></div>
+        <div class="dialogue">They don’t. I wasn’t talking about China
+anymore, I was talking about me.<br><br></div>
+        <div class="speaker">Erica<br></div>
+        <div class="dialogue">You got 1600?<br><br></div>
+        <div class="speaker">Mark<br></div>
+        <div class="dialogue">Yes. I could sing in an a Capella group,
+but I can’t sing.<br><br></div>
+
+
+    </div>
+    <div class="col-sm-1 col-md-1 col-lg-1"></div>
+    </div>
+  </div>
+</page>
+
+<div class="break"></div>
 
 
 
