--- a/index.html
+++ b/index.html
@@ -19,142 +19,18 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12">
           <h1 style="float:left">Screenplay</h1>
-          <h3 style="float:right"><span class="glyphicon glyphicon-adjust switch" aria-hidden="true"></span></h3>
+          <h3 style="float:right"><span class="glyphicon glyphicon-adjust switch" aria-hidden="true"></span>&nbsp;&nbsp;<span class="glyphicon glyphicon-print print" aria-hidden="true"></span></h3>
         </div>
       </div>
     </div>
   </nav>
 
   <div class="break"></div>
+    <div class="break"></div>
+      <div class="break"></div>
+      <div class="break"></div>
 
   <div class="container-fluid">
-
-    <!-- <page contenteditable="true" class="script edit">
-    <div class="row">
-    <div class="col-sm-12 col-md-12 col-lg-12">
-    <div class="title title-page">
-    <h4 id="script-name">UNTITLED SCREENPLAY</h4><br>
-    <p>written by<br>Anand Subramaniam</p>
-  </div>
-</div>
-</div>
-</page>
-
-<div class="break"></div>
-
-<page contenteditable="true" class="script edit">
-<div class="row">
-<div class="col-sm-1 col-md-1 col-lg-1"></div>
-<div class="col-sm-10 col-md-10 col-lg-10">
-<div class="intro">
-<h5 class="scene-heading">INT. SOME PLACE SOME WHERE — DAY
-<br>
-</h5>
-<div class="action">
-<p>This is called an action where you'd describe what is on screen — info about the setting too. Sound cues may be added here. Let's introduce VISITOR, our protagonist.</p>
-<br>
-<h5>Enter <span class="character">Visitor</span>.</h5>
-</div>
-</div>
-</div>
-<div class="col-sm-1 col-md-1 col-lg-1"></div>
-</div>
-
-
-<div class="row">
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
-<div class="col-sm-8 col-md-8 col-lg-8">
-<div class="main">
-<h5 class="character speak">VISITOR</h5>
-<p class="diag">This is where the dialogue goes. Write whatever you want - or rather, speak whatever you want.</p>
-</div>
-</div>
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
-</div>
-
-<div class="row">
-<div class="col-sm-12 col-md-12 col-lg-12">
-<div class="transition">:transition to</div>
-</div>
-</div>
-
-<div class="row">
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
-<div class="col-sm-8 col-md-8 col-lg-8">
-<div class="main">
-<h5 class="character speak">VISITOR</h5>
-<p class="diag">This is where the second line of dialogue would go.</p>
-</div>
-</div>
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
-</div>
-
-
-
-<div class="row">
-<div class="col-sm-12 col-md-12 col-lg-12">
-<div class="transition">:fade to black</div>
-</div>
-</div>
-
-
-<div class="row">
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
-<div class="col-sm-8 col-md-8 col-lg-8">
-<div class="main">
-<h5 class="character speak">VISITOR</h5>
-<p class="diag">This is where another line of dialogue goes. Write whatever you want - or rather, speak whatever you want.</p>
-</div>
-</div>
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
-</div>
-
-<div class="row">
-<div class="col-sm-12 col-md-12 col-lg-12">
-<div class="transition">:transition to</div>
-</div>
-</div>
-
-<div class="row">
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
-<div class="col-sm-8 col-md-8 col-lg-8">
-<div class="main">
-<h5 class="character speak">VISITOR</h5>
-<p class="diag">This is where the fourth line of dialogue would go.</p>
-</div>
-</div>
-<div class="col-sm-2 col-md-2 col-lg-2"></div>
-</div>
-
-<div class="row">
-<div class="col-sm-12 col-md-12 col-lg-12">
-<div class="transition">:fade to black</div>
-</div>
-</div>
-</div>
-</page>
-
-
-<div class="break"></div> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <page contenteditable="true" class="script edit title-page">
   <div class="row">
