Fix double scroll bar + logo colour scheme switching

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12">
-          <h1 style="float:left">Screenplay</h1>
-          <h3 style="float:right"><span class="glyphicon glyphicon-adjust switch" aria-hidden="true"></span>&nbsp;&nbsp;<span class="glyphicon glyphicon-print print" aria-hidden="true"></span></h3>
+          <h1 class="screenplay-logo" style="float:left">Screenplay</h1>
+          <h1 style="float:right"><span class="glyphicon glyphicon-adjust switch" aria-hidden="true"></span>&nbsp;&nbsp;<span class="glyphicon glyphicon-print print" aria-hidden="true"></span></h1>
         </div>
       </div>
     </div>
